@@ -72,13 +72,11 @@ To overwrite this behaviour, it is possible to disable hostname validation, and/
 OpenSSL
 -------
 
-The MongoDB C Driver uses OpenSSL, if available, on Linux and Unix platforms, including macOS.
-
-Industry best practices and some regulations require the use of TLS 1.1 or newer, which requires at least OpenSSL 1.0.1. However, some operating systems such as older macOS ship outdated OpenSSL libraries. Check your OpenSSL version like so::
+The MongoDB C Driver uses OpenSSL, if available, on Linux and Unix platforms (besides macOS). Industry best practices and some regulations require the use of TLS 1.1 or newer, which requires at least OpenSSL 1.0.1. Check your OpenSSL version like so::
 
   $ openssl version
 
-On macOS we recommend using `Secure Transport`_ instead. On other Unixes, upgrade your OpenSSL to a recent version (at least 1.0.1), or install a recent version in a non-system path and build against it with::
+Ensure your system's OpenSSL is a recent version (at least 1.0.1), or install a recent version in a non-system path and build against it with::
 
   cmake -DOPENSSL_ROOT_DIR=/absolute/path/to/openssl
 
@@ -107,9 +105,7 @@ When ``crl_file`` is provided, the driver will import the revocation list to the
 Native TLS Support on Mac OS X / Darwin (Secure Transport)
 ----------------------------------------------------------
 
-The MongoDB C Driver supports the Darwin (OS X, macOS, iOS, etc.) native TLS library (Secure Transport), and its native crypto library (Common Crypto, or CC). To ensure you build with Secure Transport instead of any OpenSSL library installed on your system::
-
-  cmake -DENABLE_SSL=DARWIN
+The MongoDB C Driver supports the Darwin (OS X, macOS, iOS, etc.) native TLS library (Secure Transport), and its native crypto library (Common Crypto, or CC).
 
 When compiled against Secure Transport, the ``ca_dir`` option is not supported, and will issue an error if used.
 
