@@ -13,6 +13,10 @@ bugfixes:
   * The internal preprocessor symbol HAVE_STRINGS_H has been renamed
     BSON_HAVE_STRINGS_H. If you maintain a handwritten bson-config.h you must
     rename this symbol.
+  * If CMake is configured with ENABLE_SSL=AUTO (the default), libmongoc now
+    uses native TLS libraries on Mac and Windows, and OpenSSL everywhere else.
+    Before, it would search for OpenSSL on all platforms and only use native
+    TLS on Mac and Windows as a fallback.
   * The driver now handshakes SSL connections to multiple servers in a replica
     set or sharded cluster in parallel, so long as it uses OpenSSL or Windows
     SChannel. (SSL handshakes with Apple's Secure Transport are still serial.)
